--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
-language: java
-jdk: oraclejdk8
+sudo: false
 
-cache:
-  directories:
-  - $HOME/.m2
+language: node_js
+node_js:
+- 9
 
-  notifications:
-    email:
-      recipients:
-      - nik27090@mail.ru
-      on_success: always # default: change
-      on_failure: always # default: always
+branches:
+  only:
+  - master
