--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
-sudo: false
+# https://docs.travis-ci.com/user/languages/java/
+language: java
+jdk: oraclejdk9
 
-language: node_js
-node_js:
-- 9
+# Improve Build Speed https://dzone.com/articles/travis-ci-tutorial-java-projects
+cache:
+  directories:
+  - $HOME/.m2
 
-branches:
-  only:
-  - master
+# Notifications https://docs.travis-ci.com/user/notifications/
+notifications:
+  email:
+    recipients:
+    - nik27090@mail.ru
+    on_success: always # default: change
+    on_failure: change # default: always
